# Mini-App-SpaM

./: CMakeLists.txt
include/: Algorithms.h  BucketManager.h  GlobalParameters.h  Match.h  MatchManager.h  Placement.h  Scoring.h  Sequence.h
src/: Algorithms.cpp  BucketManager.cpp  GenomeManager.cpp  GlobalParameters.cpp  Placement.cpp  ReadManager.cpp  Sequence.cpp  Tree.cpp  Word.cpp
